k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nftruth
  labels:
    name: nftruth
    app: nftruth
