k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nftruth-service
  namespace: nftruth
  labels:
    app: nftruth-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: nftruth-api
